# azure-finops-mcp-server

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  404.html  Dockerfile  MIGRATION_QUICKSTART.md  README.md  RELEASE_NOTES.md  SECURITY.md  aws-finops-mcp-server.py  benchmark.py  cleanup_aws.sh  get_cafehyna_costs.py  index.html  main.py  mkdocs.yml  objects.inv  publish.sh  pyproject.toml  requirements-dev.txt  requirements-locked.txt  requirements.txt  run_setup_commands.md  run_tests.sh  security-report.json  setup.py  setup.sh  sitemap.xml  test_disk_filter.py  test_integration.py  test_mcp_compatibility.py  test_refactoring.py
.bmad-core/: install-manifest.yaml
.bmad-infrastructure-devops/: install-manifest.yaml
.bmad-infrastructure-devops/data/: bmad-kb.md
.github/ISSUES/: 003-sequential-processing.md  004-poor-testability.md  005-monolithic-functions.md
architecture/: index.html
architecture-validation-report/: index.html
azure_finops_mcp_server/: __init__.py  config.py  main.py  main_refactored.py  monitoring.py
changelog/: index.html
deployment/: index.html
docs/: architecture-validation-report.md  architecture.md  changelog.md  deployment.md  index.md  setup-commands.md
helpers/: profiles.py
license/: index.html
quickstart/: index.html
refactor/: FINAL_REPORT.md  REFACTORING_SUMMARY.md  plan.md  state.json
search/: search_index.json
security-scan/: plan.md  state.json
setup-commands/: index.html
tests/: test_azure_utils.py  test_budget_operations.py  test_client_factory.py  test_integration.py
(+44 files in other folders)
